src/scss/index.scss
@import 'variables.scss';

*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    overflow-x: hidden;
}

body {
    font-family: 'Montserrat', sans-serif;

    h1 {
        margin-left: -2rem;

        span {
            padding-left: 5px;
            font-size: 1.6rem;
        }
    }

    .highlight-color {
        font-size: 3rem;
        color: $highlightFont;
    }

    div h2 {
        margin-top: 3rem;
    }

    .section-title {
        margin-top: 4rem;
        margin-bottom: 2rem;
        padding-bottom: 5px;
        border-bottom: 1px solid black;
    }

    .intro {
        margin-bottom: 2rem;
    }

    a {
        color: white;
        text-decoration: none;

        &:hover {
            color: pink;
        }
    }
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: calc(#{$burger-dimensions} * 2.5);
    z-index: 10;

    //Fading gradient using pseudo element
    &::before {
        content: '';
        position: absolute;
        top: 0;
        right: 0;
        width: 100%;
        height: calc(#{$contactHeight} * 2.5);
        z-index: 1;
        background: linear-gradient(to bottom, white 20%, rgba(0,0,0,0) 80%);
    }

    .banner {
        position: absolute;
        display: flex;
        justify-content: center;
        align-items: center;
        top: 1rem;
        right: 0;
        min-height: $contactHeight;
        height: 2.5vw;
        max-height: calc(#{$contactHeight} * 1.5);
        padding: 0;
        color: white;
        background: $darkmode-bg-color;
        clip-path: polygon(0.75% 0, 100% 0, 100% 100%, 0 100%);
        z-index: 2;
        
        .logo {
            position: relative;
            display: flex;
            align-items: center;
            height: 85%;
            margin: 0 10px;
            cursor: pointer;
            &::before {
                content: '';
                background: white;
                position: absolute;
                top: -20%;
                right: -5%;
                width: 2px;
                height: 140%;
                transform: rotate(3deg);
            }
        }

        .contact-links {
            display: flex;
            align-items: center;
            height: 100%;
            padding: 0.75rem;

            a {
                cursor: pointer;
                margin: 0 10px;
                font-size: 1rem;

                &:first-child {
                    margin-left: 0.5rem;
                }

                &:last-child {
                    margin-right: 1.5rem;
                }
            }

            .header-link {
                height: 100%;
                width: 1.75rem;
                background-image: url('./assets/github-logo.png');
                background-size: contain;
                background-repeat: no-repeat;
                background-position: center;

                &:hover {
                    background-image: url('./assets/github-logo-hover.png');
                }
            }

            #email-link {
                background-image: url('./assets/email-icon.png');
                &:hover {
                    background-image: url('./assets/email-icon-hover.png');
                }
            }
            #linkedin-link {
                background-image: url('./assets/linkedin-logo.png');

                &:hover {
                    background-image: url('./assets/linkedin-logo-hover.png');
                }
            }
        }
    }
}
/* ... */

